--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Update Dashboard Every 2 Hours
 
 on:
   schedule:
-    - cron: "0 */2 * * *"
+    - cron: "*/6 * * * *"
   workflow_dispatch:
 
 jobs:
